<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/_10sdp"
            android:src="@mipmap/ic_back" />

        <app.com.esenatenigeria.customviews.SemiboldTextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/activity_details"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/_10sdp"
            android:src="@mipmap/ic_logo" />

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_recent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/president" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <app.com.esenatenigeria.customviews.SemiboldTextView
                    android:id="@+id/txt_act_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/senate_passes_into_law_nation"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

                <app.com.esenatenigeria.customviews.RegularTextView
                    android:id="@+id/txt_act_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="12:15 PM 21 March 2016"
                    android:textSize="@dimen/_10ssp" />

                <app.com.esenatenigeria.customviews.RegularTextView
                    android:id="@+id/txt_act_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/composition_dummy"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_12ssp" />


            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>